# etude-rag2

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.base-streamlit  Dockerfile.ingester  Dockerfile.streamlit  README.md  cloudbuild-base-streamlit.yaml  cloudbuild-base.yaml  cloudbuild-ingester.yaml  cloudbuild-streamlit.yaml  cloudbuild.yaml  config  flake.nix  plan.md  pyproject.toml
docs/: ARCHITECTURE.md  DIFY_V3_IMPLEMENTATION_GAP.md  DIFY_WORKFLOW_V3.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V3.md  LANGCHAIN_REFERENCES.md  PROMPT_EVALUATION_STRATEGY.md  RAG_SYSTEM_BLUEPRINT.md  SETUP.md  TERRAFORM_GUIDE.md  network-architecture.drawio
refferences/: note記事ドラフト生成_v2.yml  note記事ドラフト生成_v3.yml
schemas/: schema.sql
scripts/: apply-schema.sh  build-base-images.sh  deploy-all.sh  deploy-backend.sh  deploy-frontend.sh  deploy-ingester.sh  destroy-infra.sh  ingest-style-profiles.sh  pause-infra.sh  resume-infra.sh  seed_style_profiles.py  setup-gcp-project.sh  start-local-dev.sh  sync-env-from-secrets.sh
src/: __init__.py  config.py  llm.py  main.py  secret_manager.py
src/api/: __init__.py  auth.py  generated_articles.py  job_manager.py  main.py  models.py  sse_models.py
src/chains/: __init__.py  article_chain.py  article_classifier.py  auto_rewrite.py  content_generators.py  input_parser.py  outline_generator.py  query_generator.py  structure_analyzer.py  style_analyzer.py
src/ingestion/: __init__.py  drive_ingester.py
src/retriever/: __init__.py  article_retriever.py  hybrid_search.py  reranker.py  style_retriever.py
src/templates/: article_detail.html  base.html  history_list.html  index.html  login.html
src/ui/: __init__.py  api_client.py  app.py  state.py  utils.py
src/verification/: __init__.py  hallucination_detector.py  style_checker.py
terraform/: .terraform.lock.hcl  artifact_registry.tf  cloudrun.tf  cloudsql.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfstate.1764916584.backup  terraform.tfvars.example  variables.tf  versions.tf
tests/: __init__.py  conftest.py  test_api.py  test_chains.py  test_generated_articles_schema.py  test_retriever.py  test_ui.py  test_verification.py
tests/ui/: __init__.py  test_article_delete.py  test_article_save.py  test_article_view.py  test_history_list.py  test_htmx_base.py  test_htmx_form.py  test_htmx_generate.py  test_htmx_integration.py  (+1 more)
(+3 files in other folders)
